# clipin

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  example.py  pyproject.toml  run_unittests.py  setup.py
clipbeast/: __init__.py
clipin/: __init__.py  clipboard.py  win_dib.py
tests/: __init__.py  dump_clipboard.py  pattern.tiff  test_clipbeast.py  test_clipboard.py  test_clipin.py  test_dib_parse.py  test_image.tiff  test_image_dib_roundtrip.py
