[project]
name = "clipbeast"
version = "1.0.0"
description = "A zero-dependency cross-platform clipboard utility for Python."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
