[tool.poetry]
name = "clipin"
version = "0.3.0"
description = "A zero-dependency cross-platform clipboard utility for Python."
authors = ["Nuno Brum <author@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["clipboard", "cross-platform", "utility", "cli"]

[tool.poetry.dependencies]
python = ">=2.7,<3.0 || >=3.7,<4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/nunobrum/clipin"
repository = "https://github.com/nunobrum/clipin.git"
bug-tracker = "https://github.com/nunobrum/clipin/issues"